--- a/MediviaTaskReader/MediviaTaskReader.csproj
+++ b/MediviaTaskReader/MediviaTaskReader.csproj
@@ -53,9 +53,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IPC\Constants.cs" />
     <Compile Include="IPC\MainLayer.cs" />
     <Compile Include="Objects\Character.cs" />
+    <Compile Include="Objects\CreatureTask.cs" />
+    <Compile Include="Objects\TaskMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
